--- a/src/components/ThemedComponents.css
+++ b/src/components/ThemedComponents.css
@@ -130,7 +130,7 @@
 
 /* ThemedHeader styles */
 .themed-header {
-  padding: 16px;
+  padding: opx;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
